fixed firefox bug with flex wrap

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,13 +1,13 @@
 .flexbox-container {
     margin: 0;
     list-style: none;
-  
     display: -webkit-box;
     display: -moz-box;
     display: -ms-flexbox;
+    display: -moz-flex;
     display: -webkit-flex;
     display: flex;
-  
+    flex-wrap: wrap;
     -webkit-flex-flow: row wrap;
     justify-content: center;
 }
